--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- navbar end -->
         <!-- body content start -->
         <div class="content">
-                <p>Welcome to Bright Designs</p>
+                <p>A Bright Designs production</p>
                 <h1>Epic Designers<br> Society</h1>
                 <button type="button">Take a tour</button>
 
@@ -32,16 +32,17 @@
         </div>
         <!-- sidebar end -->
         <div class="asteroids">
-            <img src="images/asteroid1.png">
-            <img src="images/asteroid2.png">
-            <img src="images/asteroid3.png">
-            <img src="images/asteroid4.png">
-            <img src="images/asteroid1.png">
-            <img src="images/asteroid2.png">
-            <img src="images/asteroid3.png">
-            <img src="images/asteroid4.png">
+            <img src="images/asteroid1.png" class="one">
+            <img src="images/asteroid2.png" class="two">
+            <img src="images/asteroid3.png" class="three">
+            <img src="images/asteroid4.png" class="four">
+            <img src="images/asteroid1.png" class="five">
+            <img src="images/asteroid2.png" class="six">
+            <img src="images/asteroid3.png" class="seven">
+            <img src="images/asteroid4.png" class="eight">
         </div>
     </div>
 </body>
-<script src="scripts.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </html>
