Add a typewriter effect for the intro

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel='stylesheet' type='text/css' href='styles.css' />
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
     <div class="vl"></div>
@@ -12,7 +13,7 @@
     <div class="hero">
         <!-- navbar start -->
         <div class="navbar">
-            <div class="logo"><span class="b">B</span><span class="d">D</span></div>
+            <div class="logo">E<span class="b">D</span><span class="d">S</span></div>
             <button type="button">Sign up</button>
         </div>
         <!-- navbar end -->
@@ -20,17 +21,32 @@
         <div class="content">
                 <p>A Bright Designs production</p>
                 <h1>Epic Designers<br> Society</h1>
-                <button type="button">Take a tour</button>
+                <!-- <button type="button">Take a tour</button> -->
+                <div class="about">
+                    <p><span id="intro"></span><span id="cursor">.</span></p>
+                </div>
+                
 
         </div>
         <!-- body content end -->
         <!-- sidebar start -->
-        <div class="side-bar">
+        <div class="nav-side-bar">
             <img src="images/menu.png" class="menu">
-
+            <!-- <div class="nav-side-bar-content">
+                <a href="" class="fas fa-home"></a>
+                <a href="" class="fas fa-shopping-cart"></a>
+                <a href="" class="fas fa-person"></a>
+                <a href="" class="fas fa-home"></a>
+            </div> -->
 
         </div>
+        <div class="links-side-bar">
+            <img src="images/fb.png" class="socials">
+            <img src="images/tw.png" class="socials">
+            <img src="images/ig.png" class="socials">
+        </div>
         <!-- sidebar end -->
+        <!-- asteroid animation start -->
         <div class="asteroids">
             <img src="images/asteroid1.png" class="one">
             <img src="images/asteroid2.png" class="two">
@@ -40,6 +56,10 @@
             <img src="images/asteroid2.png" class="six">
             <img src="images/asteroid3.png" class="seven">
             <img src="images/asteroid4.png" class="eight">
+        </div>
+        <!-- asteroid animation ends -->
+        <div class="footer">
+            <small>&#169; Bright Designs | <span id="year"></span></small>
         </div>
     </div>
 </body>
