--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- navbar start -->
         <div class="navbar">
             <div class="logo">E<span class="b">D</span><span class="d">S</span></div>
-            <button type="button">Sign up</button>
+            <button type="button" class="sign-up">Sign up</button>
         </div>
         <!-- navbar end -->
         <!-- body content start -->
@@ -64,8 +64,20 @@
             <small>&#169; Bright Designs | <span id="year"></span></small>
         </div>
     </div>
-    <div class="discover-content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, tempora. Enim, assumenda. Dicta harum nisi iure similique ut enim cumque nam facere, dolore vel quam cum saepe! Iste, obcaecati placeat! Quis iste fuga soluta cum omnis! Nisi tempore fugiat praesentium error blanditiis soluta repudiandae consectetur sapiente dolorem delectus provident odio cum minima maiores ipsa ipsam sed, voluptatibus eum? Explicabo, laudantium totam modi ea quidem omnis laborum quo atque ipsa, autem quos vero sed praesentium sunt dolorum odio exercitationem aperiam voluptatem aliquid architecto. Velit earum aperiam nesciunt nam nulla fugit debitis aspernatur nisi qui, quas ullam beatae, dolorum, magnam eaque commodi illo voluptatum laboriosam. Et sunt reiciendis consectetur provident, quidem sint molestias dolores officia recusandae consequuntur, iusto, ea ducimus numquam laborum quod ullam. Exercitationem aut cum maiores pariatur deleniti vel magni quod quasi esse tenetur ad sequi, accusantium laudantium. Doloremque, facere vero veniam in dolorum dignissimos. Deleniti earum, modi soluta nam est eos libero aut totam numquam optio sed provident dolorem illo alias, praesentium repellendus reprehenderit, vitae quia incidunt ab explicabo quibusdam? Quis ducimus laudantium amet nobis, quod rem! Corrupti quaerat eius dolores quam? Esse quia praesentium soluta, eos sapiente aliquid, quisquam sequi quasi, dolorum ullam odit voluptatum assumenda laborum autem.</p>
+    <div class="discover-section">
+        <div class="discover-nav">
+            <div class="fas fa-angle-left back-home"></div>
+            <div class="logo">E<span class="b">D</span><span class="d">S</span></div>
+            <div class="category">Photography</div>
+            <div class="category">Graphics</div>
+            <div class="category">Art</div>
+            <div class="category">Web</div>
+            <button type="button" class="sign-up">Sign up</button>
+            <div></div>
+        </div>
+        <div class="discover-content">
+            
+        </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
