create a discover page navbar

--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
         <div class="discover-nav">
             <div class="fas fa-angle-left back-home"></div>
             <div class="logo">E<span class="b">D</span><span class="d">S</span></div>
-            <div class="category">Photography</div>
-            <div class="category">Graphics</div>
-            <div class="category">Art</div>
-            <div class="category">Web</div>
+            <div class="categories">
+                <div class="category ">Photography</div>
+                <div class="category ">Graphics</div>
+                <div class="category ">Art</div>
+                <div class="category ">Web</div>
+            </div>
             <button type="button" class="sign-up">Sign up</button>
+            <img class="menu-btn"src="images/menu.png">
             <div></div>
         </div>
         <div class="discover-content">
