--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </div>
         <!-- asteroid animation ends -->
         <div class="footer">
-        
             <small>&#169; Bright Designs | <span id="year"></span></small>
         </div>
     </div>
+    <!-- discover section begins -->
     <div class="discover-section">
         <div class="discover-nav">
             <div class="fas fa-angle-left back-home"></div>
@@ -79,9 +79,82 @@
             <div></div>
         </div>
         <div class="discover-content">
-            
+            <h3 class="items-title ">Photography</h3>
+            <div class="items">
+                <div class="item">
+                    <img src="images/examples/image1.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image1.png" alt="item">
+                        <p>by Victor Kiptoo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 15th june 2020</small>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/examples/image2.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image2.png" alt="item">
+                        <p>by Kalekye nzivo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 2th feb 2020</small>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/examples/image1.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image1.png" alt="item">
+                        <p>by Victor Kiptoo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 10th dec 2020</small>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/examples/image2.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image1.png" alt="item">
+                        <p>by Kalekye nzivo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 12th jan 2020</small>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/examples/image1.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image1.png" alt="item">
+                        <p>by Victor Kiptoo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 15th june 2020</small>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/examples/image2.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image1.png" alt="item">
+                        <p>by Kalekye nzivo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 12th jan 2020</small>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/examples/image1.png" alt="item">
+                    <div class="item-content">
+                        <img class="avatar"src="images/examples/image1.png" alt="item">
+                        <p>by Victor Kiptoo</p>
+                    </div>
+                    <div class="item-footer">
+                        <small>posted 15th june 2020</small>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- discover section ends -->
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
