Spelling error correct

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
                 <p class="bright-design">A Bright Designs production</p>
                 <h1>Epic Designers<br> Society</h1>
-                <p>Discover merchedise made by the best designers</p>
+                <p>Discover merchadise made by the best designers</p>
                 <br>
                 <button type="button" class="discover">Discover <span class="fas fa-angle-right"></span></button>
     
